Fix: search icon not aligned correctly

--- a/assets/css/unminified/style-rtl.css
+++ b/assets/css/unminified/style-rtl.css
@@ -2997,11 +2997,11 @@ body {
   left: 0;
 }
 
-.header-main-layout-3 .main-header-bar .ast-search-menu-icon form {
+.header-main-layout-3 .main-header-bar .ast-search-menu-icon .search-form {
   padding: 0 3em 0 0;
 }
 
-.header-main-layout-3 .main-header-bar .ast-search-menu-icon.slide-search form {
+.header-main-layout-3 .main-header-bar .ast-search-menu-icon.slide-search .search-form {
   right: -1em;
   left: auto;
 }
@@ -3101,7 +3101,7 @@ body {
   margin-right: 1em;
 }
 
-.ast-header-break-point .header-main-layout-3 .main-header-bar .ast-search-menu-icon.slide-search form {
+.ast-header-break-point .header-main-layout-3 .main-header-bar .ast-search-menu-icon.slide-search .search-form {
   left: auto;
   right: 0;
 }
@@ -3521,7 +3521,7 @@ body {
   padding-top: 1em;
 }
 
-.main-header-bar .ast-search-menu-icon form {
+.main-header-bar .ast-search-menu-icon .search-form {
   background-color: #ffffff;
 }
 
@@ -3533,7 +3533,7 @@ body {
   .ast-mobile-header-stack .main-header-bar .ast-search-menu-icon {
     display: inline-block;
   }
-  .ast-header-break-point.ast-header-custom-item-inside .main-header-bar .ast-search-menu-icon form {
+  .ast-header-break-point.ast-header-custom-item-inside .main-header-bar .ast-search-menu-icon .search-form {
     visibility: visible;
     opacity: 1;
     position: relative;
@@ -3546,10 +3546,10 @@ body {
   .ast-header-break-point.ast-header-custom-item-outside .ast-mobile-header-stack .main-header-bar .ast-search-icon {
     margin: 0;
   }
-  .ast-header-break-point .main-header-bar .ast-search-menu-icon.slide-search form {
+  .ast-header-break-point .main-header-bar .ast-search-menu-icon.slide-search .search-form {
     left: 0;
   }
-  .ast-header-break-point .ast-mobile-header-stack .main-header-bar .ast-search-menu-icon.slide-search form {
+  .ast-header-break-point .ast-mobile-header-stack .main-header-bar .ast-search-menu-icon.slide-search .search-form {
     left: -1em;
   }
 }
@@ -3560,7 +3560,7 @@ body {
   color: #757575;
 }
 
-.ast-search-menu-icon.slide-search form {
+.ast-search-menu-icon.slide-search .search-form {
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
   visibility: hidden;
@@ -3576,12 +3576,12 @@ body {
   transform: translateY(-50%);
 }
 
-.ast-search-menu-icon.ast-dropdown-active.slide-search form {
+.ast-search-menu-icon.ast-dropdown-active.slide-search .search-form {
   visibility: visible;
   opacity: 1;
 }
 
-.ast-search-menu-icon form {
+.ast-search-menu-icon .search-form {
   border: 1px solid #e7e7e7;
   line-height: normal;
   padding: 0 0 0 3em;
